--- a/package.json
+++ b/package.json
@@ -9,20 +9,46 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^1.0.6",
     "@nuxtjs/toast": "^3.3.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
-    "antd": "^5.2.1",
+    "animate.css": "^4.1.1",
+    "antd": "^5.1.2",
+    "antd-country-phone-input": "^4.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.3.3",
     "date-fns": "^2.29.3",
+    "file-saver": "^2.0.5",
+    "formik": "^2.2.9",
+    "formik-antd": "^2.0.4",
+    "framer-motion": "^8.0.2",
+    "gsap": "^3.11.4",
+    "helmet": "^6.0.1",
+    "image-size": "^1.0.2",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "moment": "^2.29.4",
     "qrcode.react": "^3.1.0",
+    "rc-picker": "^3.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-health-card": "^1.4.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.2.13",
     "react-router-dom": "^6.8.1",
-    "react-toast": "^1.0.3"
+    "react-toast": "^1.0.3",
+    "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.6",
+    "world_countries_lists": "^2.6.0",
+    "xlsx": "^0.18.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
