--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.1.2",
     "antd-country-phone-input": "^4.5.0",
     "aos": "^2.3.4",
+    "awesome-phonenumber": "^5.2.0",
     "axios": "^1.3.3",
     "date-fns": "^2.29.3",
     "file-saver": "^2.0.5",
@@ -28,9 +29,11 @@
     "framer-motion": "^8.0.2",
     "gsap": "^3.11.4",
     "helmet": "^6.0.1",
+    "i18n-iso-countries": "^7.5.0",
     "image-size": "^1.0.2",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "libphonenumber-js": "^1.10.21",
     "moment": "^2.29.4",
     "qrcode.react": "^3.1.0",
     "rc-picker": "^3.1.4",
