--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "less-loader": "^11.1.0",
     "libphonenumber-js": "^1.10.21",
     "moment": "^2.29.4",
+    "qrcode": "^1.5.1",
     "qrcode.react": "^3.1.0",
     "rc-picker": "^3.1.4",
     "react": "^18.2.0",
